--- a/app/src/main/res/drawable/ic_fab.xml
+++ b/app/src/main/res/drawable/ic_fab.xml
@@ -3,7 +3,13 @@
     <item>
         <selector>
             <item android:state_pressed="true">
-                <shape android:shape="oval">
+                <shape android:shape="oval" android:innerRadius="28dp">
+                    <solid android:color="@color/accent_material_light"/>
+                </shape>
+            </item>
+
+            <item android:state_enabled="false">
+                <shape android:shape="oval" android:innerRadius="28dp">
                     <solid android:color="@color/accent_material_dark"/>
                 </shape>
             </item>
