--- a/app/src/main/res/layout/item_script.xml
+++ b/app/src/main/res/layout/item_script.xml
@@ -1,20 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:background="@color/icons"
-              android:minHeight="?attr/listPreferredItemHeight"
-              android:gravity="center_vertical"
-              tools:ignore="RtlHardcoded">
-    <TextView
-            style="@style/Base.TextAppearance.AppCompat.Medium"
-            android:id="@android:id/text1"
+<com.daimajia.swipe.SwipeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/swipe_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="?attr/listPreferredItemHeight"
+        app:drag_edge="left"
+        tools:ignore="RtlHardcoded,RtlSymmetry">
+    <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="bottom"
+            android:orientation="horizontal"
+            android:gravity="center_vertical|left">
+
+        <ImageButton
+                android:id="@+id/item_script_edit_img"
+                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:paddingTop="@dimen/modest_screen_margin"
+                android:paddingBottom="@dimen/modest_screen_margin"
+                android:paddingLeft="@dimen/rich_screen_margin"
+                android:paddingRight="@dimen/rich_screen_margin"
+                android:baselineAlignBottom="true"
+                android:layout_centerVertical="true"
+                android:background="@color/accent"
+                android:src="@drawable/ic_mode_edit_white_18dp"
+                android:contentDescription="@string/edit_script"
+                android:clickable="true"/>
+
+            <ImageButton
+                    android:id="@+id/item_script_delete_img"
+                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:paddingTop="@dimen/modest_screen_margin"
+                    android:paddingBottom="@dimen/modest_screen_margin"
+                    android:paddingLeft="@dimen/rich_screen_margin"
+                    android:paddingRight="@dimen/rich_screen_margin"
+                    android:baselineAlignBottom="true"
+                    android:layout_centerVertical="true"
+                    android:background="@color/accent_material_light"
+                    android:src="@drawable/ic_delete_white_18dp"
+                    android:contentDescription="@string/remove_script"
+                    android:clickable="true"/>
+    </LinearLayout>
+
+    <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/modest_screen_margin"
-            android:gravity="left"
-            android:textColor="@color/primary_dark"
-            tools:text="example.groovy"/>
-</LinearLayout>
+            android:background="@color/icons"
+            android:gravity="center_vertical|left">
+
+            <TextView
+                    style="@style/Base.TextAppearance.AppCompat.Medium"
+                    android:id="@android:id/text1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/rich_screen_margin"
+                    android:layout_marginRight="@dimen/modest_screen_margin"
+                    android:layout_marginTop="@dimen/modest_screen_margin"
+                    android:layout_marginBottom="@dimen/modest_screen_margin"
+                    android:gravity="left"
+                    android:textColor="@color/primary_dark"
+                    tools:text="example.groovy"/>
+    </LinearLayout>
+</com.daimajia.swipe.SwipeLayout>
