--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="rich_screen_margin">24dp</dimen>
     <dimen name="modest_screen_margin">16dp</dimen>
     <dimen name="minor_screen_margin">8dp</dimen>
     <dimen name="windowMinWidthMaterial">280dp</dimen>
