--- a/app/src/main/res/layout/act_picker.xml
+++ b/app/src/main/res/layout/act_picker.xml
@@ -22,7 +22,7 @@
     <ListView
             android:id="@+id/list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_below="@id/toolbar"
             android:footerDividersEnabled="false"
             tools:listitem="@layout/item_script"
