--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,8 @@
     <color name="secondary_text">#727272</color>
     <color name="icons">#FFFFFF</color>
     <color name="divider">#B6B6B6</color>
+
+    <color name="red">#f44336</color>
+    <color name="lightRed">#e57373</color>
+    <color name="darkRed">#b71c1c</color>
 </resources>
